fix: user_passwd empty password, tests and swagger
